@@ -1,16 +1,16 @@
-FCTest User Documentation
-=========================
+FCTX User Documentation
+=======================
 
 Welcome
 --------
 
-Use Fast C Unit Test as a lightweight tool for quickly generating unit tests in
+Use Fast C XUnit Test as a lightweight tool for quickly generating unit tests in
 C/C++. Simply include a header and start typing out your tests.
  
-With Fast C Test (FCTest) you can write tests in C/C++ just like you can in
-other introspective languages like Java and Python. FCTest does not require a
-post-processing step. FCTest does not require registration of your functions.
-Declare your test and start writing.
+With FCTX you can write tests in C/C++ just like you can in other introspective
+languages like Java and Python. FCTX does not require a post-processing step.
+FCTX does not require registration of your functions.  Declare your test and
+start writing.
 
 Contents
 --------
